--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,6 +1,6 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "Seite nicht gefunden"
+excerpt: "Diese seite wurde leider nicht gefunden."
 sitemap: false
 permalink: /404.html
 ---
