--- a/Alt/_pages/404.md
+++ b/Alt/_pages/404.md
@@ -1,6 +1,6 @@
 ---
 title: "Seite nicht gefunden"
-excerpt: "Diese seite wurde leider nicht gefunden."
+excerpt: "Diese Seite wurde leider nicht gefunden."
 sitemap: false
 permalink: /404.html
 ---
