--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 1
 date: 26-08-2022
-img: famirol.jpg
-alt: image-alt
+img: Famirol.jpg
+alt: Famirol
 project-date: August 2022
 client: Famirol
 category: Hochseilgarten
